    * 3935 FIX: FIX avaya_45xx_cpu: check got UNKNOWN using Nagios core
    * 3896 FIX: Agent RPMs: Fixing dependency issue with old check_mk-agent-oracle-*.rpm and check_mk-agent-logwatch-*.rpm
    * 3936 FIX: chrony: support new params dictionary and rule "State of NTP time synchronisation"
    * 3649 FIX: Added a workaround for an escaping-related bug in old bash versions...

    WATO:
    * 3915 User access times: New icon when never logged in; New column "last seen"
    * 3914 FIX: Roles: Aliases are now unique during cloning
    * 3820 FIX: Network scan: no longer fails completely if hostname already exists in configuration...

    Notifications:
    * 3957 mail: now allows extra HTML section between body and table

    BI:
    * 3955 BI rule ID can now be renamed

    Livestatus:
    * 3740 Moved livedump utility from treasures directly into bin directory...

    HW/SW-Inventory:
    * 3906 oracle: now version, database creation and startup time, log and open mode, logins, flashback are inventorised
    * 3944 Added OS related information for Cisco, Fireeye and Infoblox devices...
    * 3908 winperf_if, lnx_if: new inventory plugins for switch port statistics of linux and windows hosts


1.4.0i1:
    Core & Setup:
    * 3342 MKP: local/lib and local/bin of sites can now be packed...
    * 3114 linux and windows agent can now be configured to directly encrypt their output. For real-time updates encryption is now optional (but active per default)...
    * 3531 Reduced Check_MK helper size for certain dists/python versions...
    * 3580 The macro $HOSTNAME$ is now available for host checks which are based on service states
    * 3155 implemented dual monitoring for systems with management boards (like HP iLO)
    * 3721 Host macros are now replaced in datasource program command lines...
    * 3853 cmk --list-tag can now also list offline hosts
    * 3806 Sped up "Activate changes"...
    * 3193 FIX: Fixed fake check results for hosts...