@@ -1,0 +1,9 @@
+Title: Fixed possible exception in raw edition when rendering graphs
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.4.0i2
+Date: 1476188863
+Class: fix
+
+
